added forgotten logout
